--- a/_posts/2012-12-31-testpost.md
+++ b/_posts/2012-12-31-testpost.md
@@ -1,8 +1,10 @@
 ---
 layout: post
 title:  "Welcome to Jekyll!"
+lead: "Some super duper cool Intro to the main article which follows down below."
 date:   2014-01-16 22:44:13
 categories: words
+img: jekyll.png
 ---
 
 You'll find this post in your `_posts` directory - edit this post and re-build (or run with the `-w` switch) to see your changes!
