--- a/_posts/2012-12-31-testpost.md
+++ b/_posts/2012-12-31-testpost.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Welcome to Jekyll!"
+title:  "Welcome to New Stufff!"
 lead: "Some super duper cool Intro to the main article which follows down below."
 date:   2014-01-16 22:44:13
 categories: words
